assets/css/modern-hugo-resume.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body {
    background-color: var(--background);
    color: var(--body);
    margin-left: auto;
    margin-right: auto;
    max-width: var(--page-width);
    padding-left: theme("padding.4");
    padding-right: theme("padding.4");
  }

  :root {
    --background: theme("colors.white");
    --body: theme("colors.gray.700");
    --headings: theme("colors.gray.900");
    --link-hover: var(--body);
    --invert-background: theme("colors.neutral.800");
    --invert-body: theme("colors.gray.300");
    --invert-headings: theme("colors.white");
    --invert-link-hover: theme("colors.gray.100");
  }

  @media (prefers-color-scheme: dark) {
    :root {
      --background: var(--invert-background);
      --body: var(--invert-body);
      --headings: var(--invert-headings);
      --link-hover: var(--invert-link-hover);
    }
  }

  h1,
  h2,
  h3 {
    color: var(--headings);
    margin-bottom: theme("margin.4");
    margin-top: theme("margin.6");
    line-height: 1.25;
  }

  h1 {
    font-size: theme("fontSize.3xl");
    font-weight: theme("fontWeight.semibold");
  }

  h2 {
    font-size: theme("fontSize.2xl");
    font-weight: theme("fontWeight.semibold");
  }

  h3 {
    font-size: theme("fontSize.lg");
    font-weight: theme("fontWeight.semibold");
  }

  a,
  p,
  li {
    font-size: theme("fontSize.base");
    line-height: theme("lineHeight.6");
  }

  p,
  ul,
  ol {
    margin-bottom: theme("margin.4");
  }

  ul {
    list-style-type: disc;
    padding-inline-start: 22px;

    ul {
      list-style-type: circle;
      margin-bottom: theme("margin.2");
      margin-top: theme("margin.2");
    }

    > li {
      margin-bottom: theme("margin.1");
      margin-top: theme("margin.1");
      padding-inline-start: theme("padding[1.5]");
    }
  }

  a {
    text-decoration-line: underline;
  }

  a:hover {
    color: var(--link-hover);
  }

  footer {
    width: theme("width.full");
  }

  @media print {
    body {
      padding-left: 0;
      padding-right: 0;
    }

    a {
      text-decoration-line: none;
    }

    h2,
    h3,
    p {
      break-after: avoid-page;
    }

    p,
    ul {
      break-inside: avoid-page;
    }

    footer {
      position: absolute;
      bottom: calc((1 - var(--page-count)) * 100%);
    }
  }
}

@layer components {
  .inline-svg svg {
    display: inline-block;
    fill: currentcolor;
    height: 1em;
    margin-right: theme("margin.2");
    vertical-align: calc(0.5cap - 0.5em);
    width: 1em;
  }
}

@page {
  margin: var(--page-margin);
  size: var(--page-width) var(--page-height);
}

